--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Gabriel Cruz</h1>
-        <img src="./assets/image/myself.jpeg" alt="myself" class="center" style="width: 200px;px;height: 200px;">
+        <img src="./assets/image/myself.jpeg" alt="myself" class="center" style="width: 200px;height: 200px;">
         <nav>
             <ul>
                 <li> 
@@ -43,8 +43,6 @@
     <article>
         <section id="Work"></section>
         <h2>Work</h2>
-        <a href="https://github.com/Gcruz10?tab=repositories">
-            <img src="./assets/image/coding.jpg.crdownload"alt="coding photo" style="width: 350px;height: 250px;">
         </a>
         <a href="https://gcruz10.github.io/Refactor-Homework/">
             <img src="./assets/image/horiseon.png"alt="html homework" style="width: 350px; height: 250px;">
